--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
       }
     </style>
     <title>Administrador OVA</title>
-    <script defer="defer" src="./static/js/main.de1d6dff.js"></script>
-    <link href="./static/css/main.a8d02abe.css" rel="stylesheet" />
+    <script
+      defer="defer"
+      src="/OvaFrontend/static/js/main.e1a7191c.js"
+    ></script>
+    <link href="/OvaFrontend/static/css/main.a8d02abe.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
