--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <title>Administrador OVA</title>
     <script
       defer="defer"
-      src="/OvaFrontend/static/js/main.e1a7191c.js"
+      src="./static/js/main.e1a7191c.js"
     ></script>
-    <link href="/OvaFrontend/static/css/main.a8d02abe.css" rel="stylesheet" />
+    <link href="./static/css/main.a8d02abe.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
